--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div id="container-2" class="container-fluid col-md-6 offset-md-3">
             <div id="blue-crystal">
-                <img src="https://imgur.com/X19BhYr.JPG" alt="Blue Crystal" class="crystal img-fluid rounded float-left">
+                <img src="https://imgur.com/X19BhYr.JPG" alt="Blue Crystal" class="image" />
             </div>
             <div id="green-crystal">
                 <img src="/assets/images/green-crystal.JPG" alt="Blue Crystal" class="crystal img-fluid rounded float-left">
