--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
         <div id="container-2" class="container-fluid col-md-6 offset-md-3">
             <div id="blue-crystal">
-                <img src="https://imgur.com/X19BhYr.JPG" class="image" >
+                 <img src="assets/images/blue-crystal.JPG" alt="Blue Crystal" class='crystal img-fluid rounded float-left'>
             </div>
             <div id="green-crystal">
-                <img src="/assets/images/green-crystal.JPG" alt="Blue Crystal" class="crystal img-fluid rounded float-left">
+                <img src="assets/images/green-crystal.JPG" alt="Blue Crystal" class="crystal img-fluid rounded float-left">
             </div>
             <div id="red-crystal">
-                <img src="/assets/images/red-crystal.JPG" alt="Red Crystal" class="crystal img-fluid rounded float-left">
+                <img src="assets/images/red-crystal.JPG" alt="Red Crystal" class="crystal img-fluid rounded float-left">
             </div>
             <div id="yellow-crystal">
-                <img src="/assets/images/yellow-crystal.JPG" alt="Yellow Crystal" class="crystal img-fluid rounded float-left">
+                <img src="assets/images/yellow-crystal.JPG" alt="Yellow Crystal" class="crystal img-fluid rounded float-left">
             </div>
         </div>
         
